--- a/styles/all.css
+++ b/styles/all.css
@@ -176,7 +176,12 @@ footer {
     display: block;
 }
 
-.footer a {
+/* tibame專題作品txt */
+footer .footer-pic p{ 
+    display: none;
+}
+
+.footer ul li a {
     text-align: center;
     text-decoration: none;
     color: #fff;
@@ -244,7 +249,6 @@ footer {
 
 .warning-box .drink {
     font-size: 50px;
-    right: 15%; 
     line-height: 1.25;
     text-align: center;
 }
@@ -263,4 +267,53 @@ footer {
 
 .footer-icon a {
     color: #fff;
+}
+
+@media screen and (max-width:768px) {
+*{
+    overflow-x: hidden;
+}
+
+header nav ul{
+    display: none;
+}
+header nav .pic{
+    width: 50%;
+}
+
+footer{
+    height: 28vh;
+}
+
+footer .footer-pic p{
+    padding-top: 10px;
+    line-height: 1.25;
+    display: block;
+    text-align: center;
+    color: #eee;
+}
+
+footer .footer-pic{
+    width: 100%;
+}
+
+footer .footer-pic img{
+    margin: 0 auto;
+}
+
+.footer ul li,.footer-icon{
+    display: none;
+}
+
+.warning-box{
+    max-width: 100%;
+}
+
+.warning-box .drink {
+    padding: 10px 0;
+    font-size: 20px;
+}
+.warning-box .tibame {
+    display: none;
+} 
 }
