--- a/styles/location.css
+++ b/styles/location.css
@@ -1,6 +1,6 @@
     /* 地址區開始 */
 article{
-    width: 100%;
+    max-width: 100%;
 }
 
 article h1{
@@ -13,11 +13,12 @@ article h1{
     text-shadow: 15px 15px 10px #000;
 }
 
-.miuking,.miuqueen{
-    width: 1000px;
+.miuking,
+.miuqueen{
+    max-width: 1000px;
     display: flex;
-    justify-content: center;
     flex-direction: row-reverse;
+    justify-content: center;
     overflow: hidden;
     margin: 30px auto;
     box-shadow: 3px 3px 9px #000;
@@ -26,8 +27,8 @@ article h1{
 .miuking .pic,
 .miuqueen .pic{
     border: 2px solid #b28850;
-    width: 600px;
-    height: 400px;
+    max-width: 600px;
+    max-height: 400px;
 }
 
 .miuking .pic img,
@@ -38,7 +39,7 @@ article h1{
 
 .miuking .txt,
 .miuqueen .txt{
-    width: 500px;
+    max-width: 500px;
     padding: 0 10px;
     color:#000;
     background-color: #b28850;
@@ -68,4 +69,20 @@ article h1{
     letter-spacing: 1px;
     margin: 5px 10px;
 }
+
     /* 地址區結束 */
+
+@media screen and (max-width:768px) {
+    article h1 {
+    padding: 20px;
+    font-size: 48px;
+    margin: 10px 0;
+    }
+    .miuking,
+    .miuqueen{
+    flex-direction: column;
+    padding: 20px;
+    margin: 5px 0;
+    box-shadow: 0px 0px 0px #000;
+    }
+}
