--- a/styles/takeout.css
+++ b/styles/takeout.css
@@ -3,25 +3,12 @@
     margin-bottom: 30px;
 }
 .banner .pic img{
-    width: 100%;
+    max-width: 100%;
     vertical-align: top;
 }
 
-.banner .txt{
-    background-color: #0008;
-    position: absolute;
-    top:20%;
-    width: 100%;
-}
-.banner .txt p{
-    color: #fff;
-    font-size: 48px;
-    margin: auto;
-    text-align: center;
-    padding: 20px;
-}
 .description{
-    width: 50%;
+    max-width: 50%;
     padding: 20px;
     margin: auto;
     border: 3px dashed #fff;
@@ -38,16 +25,18 @@
     color: #b28850;
     font-size: 18px;
 }
+
 .food-card-container{
-    width: 1200px;
+    max-width: 1200px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 30px;
 }
+
 .food-card-container .card{
-    width: 280px;
+    max-width: 280px;
     box-sizing: border-box;
     background-color: #C3C3D6;
     border-radius: 15px;
@@ -55,30 +44,36 @@
 }
 
 .food-card-container .pic img{
-    width: 100%;
+    max-width: 100%;
     vertical-align: top;
     border-radius: 15px 15px 0 0;
 }
+
 .food-card-container .card .txt{
     margin: 10px;
     border-bottom: 1px solid #555;
 }
+
 .food-card-container .card .txt h2{
     color: #333;
     font-weight: bold;
     margin-bottom: 3px;
+    font-size: 20px;
 }
+
 .food-card-container .card .txt span{
     display: block;
     color: #444;
     padding-bottom: 5px;
 }
+
 .food-card-container .card .btn {
     display: flex;
     justify-content: space-between;
     margin: 10px;
     color: #b28850;
 }
+
 .food-card-container .card .btn .fa-dollar-sign span{
     padding-left: 5px;
     letter-spacing: 1.5px;
@@ -86,12 +81,13 @@
 }
 
 .food-card-container .card .btn .count span{
-margin: 0 10px;
+    margin: 0 10px;
 }
 
 .next-btn{
+    display: block;
     background-color: #b28850;
-    width: 40px;
+    min-width: 40px;
     padding: 10px;
     margin-top: 20px;
     border-radius: 5px;
@@ -100,4 +96,74 @@ margin: 0 10px;
     text-decoration: none;
     color: #333;
     font-size: 16px;
+}
+
+/* RWD */
+@media screen and (max-width:768px) {
+    .description{
+        width: 80%;
+        padding: 5px;
+    }
+
+    .description p{
+        color: #fff;
+        text-align: left;
+        padding: 4px;
+        line-height: 1.25;
+    }
+    
+    .description a{
+        font-size: 16px;
+    }
+
+    .food-card-container{
+        width: 100%;
+        margin: 20px auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 0;
+    }
+    
+    .food-card-container .card{
+        width: 40%;
+        box-sizing: border-box;
+        background-color: #C3C3D6;
+        border-radius: 15px;
+        margin: 5px;
+    }
+    
+    .food-card-container .card .txt{
+        margin: 10px;
+        border-bottom: 1px solid #555;
+    }
+    
+    .food-card-container .card .txt h2{
+        text-align: center;
+        padding-bottom: 5px;
+        font-size: 16px;
+    }
+    
+    .food-card-container .card .txt span{
+        display: none;
+    }
+
+    .food-card-container .card .btn .fa-dollar-sign span{
+        padding-left: 5px;
+        letter-spacing: 1.5px;
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+    
+    .food-card-container .card .btn .count span{
+        margin: 0px;
+        padding: 10px;
+        letter-spacing: 0px;
+    }
+
+    .next-btn{
+        width: 40px;
+        padding: 10px;
+        font-size: 14px;
+    }
 }
