--- a/styles/news.css
+++ b/styles/news.css
@@ -1,6 +1,6 @@
     /* 頂部標題開始 */
 .top{
-    width: 1200px;
+    max-width: 1200px;
     margin: auto;
 }
     
@@ -16,7 +16,7 @@
     /* 頂部標題結束 */
     /* 卡片區開始 */
 .news-card-container{
-    width: 1200px;
+    max-width: 1200px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -42,18 +42,16 @@
 
 
 .news-card a span{
-    display: block;
-    position: relative;
-    padding: 5px;
-    text-align: center;
-    display: none;
-    bottom: 20%;
-    width: 97%;
+    max-width: 97%;
     height: 15%;
-    display: block;
-    margin: auto;
     color: #fff;   
     background-color: #0008;
+    display: block;
+    margin: auto;
+    padding: 5px;
+    text-align: center;
+    position: relative;
+    bottom: 20%;
 }
 
 .news-card:hover a span{
@@ -98,3 +96,37 @@
     text-align: center;
 }
     /* 卡片區結束 */
+
+
+/* RWD */
+@media screen and (max-width:768px) {
+    .top h1 {
+        padding: 20px;
+        font-size: 48px;
+        margin: 10px 0;
+        }
+
+    .news-card-container{
+        min-width: 100%;
+        margin: 0 auto 20px;
+    }
+    
+    .news-card{
+        min-width: 20%;
+        overflow-y: hidden;
+        margin: 10px;
+    }
+
+    .news-card a{
+        font-size: 18px;
+        line-height: 1.25;
+        margin: auto;
+        text-decoration: none;
+    }
+
+    .news-card a span{
+        max-width: 100%;
+        bottom: 17%;
+    }
+
+}
